# AgentHarness

./: LICENSE  README.md  agentharness  pyproject.toml
agentharness_proto/: policy_engine.py  tool_governance_sample.yaml
docs/: 00-asset-map.md  01-agent-design-pattern-library.md  02-tool-governance-policy.md  03-agent-safety-eval-suite.md  04-prompt-policy-compiler.md  05-loop-file-bus.md  06-runtime-architecture.md  07-enterprise-positioning-and-boundary-audit.md  08-glossary-and-product-contract.md  09-source-backed-integration-strategy.md  10-enterprise-audit-report-and-buyer-demo.md  11-reproducible-enterprise-demo.md  12-buyer-reviewer-decision-guide.md  13-external-reviewer-checklist.md  14-reviewer-dry-run-and-reproducibility.md  15-agentharness-development-loop-operating-model.md  16-phase-e-release-readiness-and-packaging-audit.md  17-pi-integration-boundary-and-contract.md  18-pi-tool-call-mapping-fixture.md  19-pi-contract-check-cli.md  20-pi-dual-repo-dry-run-e2e.md  21-pi-controlled-read-only-poc.md  22-pi-integration-readiness-pause-review.md  23-pi-milestone-packaging-audit.md  24-pi-observation-evidence-contract-v1.md  25-pi-runtime-authorization-readiness-adr.md  26-agentharness-pi-shadow-milestone-packaging.md  27-pi-runtime-authorization-phase0-preflight.md  AgentDesignPatterns.md
evals/: agent_safety_eval_suite.yaml
examples/: agent_policy.example.yaml
patterns/: agent_design_patterns.yaml
policies/: tool_governance.yaml
release/: 2026.06.13.md  2026.06.15.md  2026.06.18.md  2026.06.22.md  2026.06.24.md  2026.06.29.md  2026.07.01.md  (+8 more)
(+89 files in other folders)
