[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentharness"
version = "0.2.0a1"
description = "Pre-execution evidence controls and verification assets for agent actions."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
]

[project.scripts]
agentharness = "agentharness.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
